src/objects/Sales_Manager__c.object
<CustomObject>
    <description>Person who works at car rent saloon and helps people to rent proper car.</description>
    <fields>
        <fullName>Birth_Date__c</fullName>
        <label>Birth Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Is_Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Synchronization status</description>
        <label>Is Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastRaiseDate__c</fullName>
        <label>LastRaiseDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Salary__c</fullName>
        <label>Salary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Sales Manager</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Managers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>